tdf#148299 Don't unmotivatedly mess with spaces in file names

This conversion of double to single spaces had been done ever since
84a3db80b4fd66c6854b3135b5f69b61fd828e62 "initial import", but it is unclear to
me why.

The same conversion functionality is also used at two places in
sw/source/ui/dialog/uiregionsw.cxx.  Not sure if it has any motivation there, so
lets keep that intact for now.

Change-Id: I0558f015c53f69a9a405891b9dad21a98de3533c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133841
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>